@@ -7,7 +7,6 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import lombok.AllArgsConstructor;
-import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -17,7 +16,6 @@ import ru.nsu.sports.complex.backend.model.Section;
 import ru.nsu.sports.complex.backend.service.SectionService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.NoSuchElementException;
 
 @RestController
@@ -25,22 +23,18 @@ import java.util.NoSuchElementException;
 @AllArgsConstructor
 public class SectionController {
     private final SectionService service;
-    private final SectionConverter converter;
 
     @Operation(summary = "Получить информацию о секции по id.")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Секция.", content = {
                     @Content(mediaType = "application/json", schema =
                     @Schema(implementation = SectionDTO.class))
-            })})
+            })
+    })
     @GetMapping("/{id}")
     public ResponseEntity<SectionDTO> findById(@PathVariable Integer id) {
         Section section = service.findById(id);
-        if (section != null) {
-            return new ResponseEntity<>(converter.sectionToDTO(section), HttpStatus.OK);
-        } else {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
+        return new ResponseEntity<>(SectionConverter.sectionToDTO(section), HttpStatus.OK);
     }
 
     @Operation(summary = "Получить информацию о секции по названию.")
@@ -48,15 +42,12 @@ public class SectionController {
             @ApiResponse(responseCode = "200", description = "Секция.", content = {
                     @Content(mediaType = "application/json", schema =
                     @Schema(implementation = Section.class))
-            })})
+            })
+    })
     @GetMapping("/name/{name}")
     public ResponseEntity<Section> findByName(@PathVariable String name) {
         Section section = service.findByName(name);
-        if (section != null) {
-            return new ResponseEntity<>(section, HttpStatus.OK);
-        } else {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
+        return new ResponseEntity<>(section, HttpStatus.OK);
     }
 
     @Operation(summary = "Получить список созданных секций.")
@@ -64,12 +55,13 @@ public class SectionController {
             @ApiResponse(responseCode = "200", description = "Список секций.", content = {
                     @Content(mediaType = "application/json", schema =
                     @Schema(implementation = List.class))
-            })})
+            })
+    })
     @GetMapping
     public List<SectionDTO> findAllSections() {
         return service.findAllSections().stream()
-                .map(converter::sectionToDTO)
-                .collect(Collectors.toList());
+                .map(SectionConverter::sectionToDTO)
+                .toList();
     }
 
     @Operation(summary = "Создать новую секцию.")
@@ -77,39 +69,41 @@ public class SectionController {
             @ApiResponse(responseCode = "200", description = "Созданная секция.", content = {
                     @Content(mediaType = "application/json", schema =
                     @Schema(implementation = SectionDTO.class))
-            })})
+            })
+    })
     @PostMapping
-    public ResponseEntity<SectionDTO> createSection(@RequestBody SectionDTO sectionDTO) {
-        try {
-            Section newSection = service.createSection(converter.DTOtoSection(sectionDTO));
-            return new ResponseEntity<>(converter.sectionToDTO(newSection), HttpStatus.OK);
-        } catch (DataIntegrityViolationException e) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
+    public ResponseEntity<SectionDTO> createSection(@RequestBody SectionDTO newSectionDTO) {
+        Section createdSection = service.createSection(newSectionDTO);
+        return new ResponseEntity<>(SectionConverter.sectionToDTO(createdSection), HttpStatus.OK);
     }
 
+    @Operation(summary = "Обновить поля секции.")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Обновленная секция.", content = {
+                    @Content(mediaType = "application/json", schema =
+                    @Schema(implementation = SectionDTO.class))
+            })
+    })
     @PutMapping("/{id}")
-    public ResponseEntity<Section> updateSection(@PathVariable Integer id, @RequestBody Section section) {
-        try {
-            Section updatedSection = service.updateSection(section, id);
-            return new ResponseEntity<>(updatedSection, HttpStatus.OK);
-        } catch (NoSuchElementException | DataIntegrityViolationException e) {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
+    public ResponseEntity<SectionDTO> updateSection(@PathVariable Integer id, @RequestBody SectionDTO updatedSectionDTO) {
+        Section updatedSection = service.updateSection(id, updatedSectionDTO);
+        return new ResponseEntity<>(SectionConverter.sectionToDTO(updatedSection), HttpStatus.OK);
     }
 
     @Operation(summary = "Удалить секцию по id.")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", content = {
                     @Content(mediaType = "application/json", schema =
-                    @Schema())
-            })})
+                    @Schema(implementation = String.class))
+            })
+    })
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteSectionById(@PathVariable Integer id) {
-        if (service.deleteSectionById(id)) {
-            return new ResponseEntity<>(HttpStatus.OK);
+    public ResponseEntity<String> deleteSectionById(@PathVariable Integer id) {
+        boolean isDeleted = service.deleteSectionById(id);
+        if (isDeleted) {
+            return new ResponseEntity<>("Section deleted successfully", HttpStatus.OK);
         } else {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+            throw new NoSuchElementException("Section with id '" + id + "' does not exist");
         }
     }
 
@@ -117,34 +111,16 @@ public class SectionController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", content = {
                     @Content(mediaType = "application/json", schema =
-                    @Schema())
-            })})
-    @DeleteMapping("/name/{name}")
-    public ResponseEntity<Void> deleteSectionByName(@PathVariable String name) {
-        if (service.deleteSectionByName(name)) {
-            return new ResponseEntity<>(HttpStatus.OK);
-        } else {
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
-    }
-
-    @Operation(summary = "Зарегистрировать пользователя в секции.")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "Пользователь успешно записан в секцию.", content = {
-                    @Content(mediaType = "application/json", schema =
-                    @Schema(implementation = SectionDTO.class))
-            }),
-            @ApiResponse(responseCode = "400", description = "Ошибка при регистрации.", content = @Content)
+                    @Schema(implementation = String.class))
+            })
     })
-    @PostMapping("/register")
-    public ResponseEntity<String> registerUserInSection(
-            @RequestParam Integer userId,
-            @RequestParam Integer sectionId) {
-        try {
-            service.registerUserInSection(userId, sectionId);
-            return new ResponseEntity<>(HttpStatus.OK);
-        } catch (RuntimeException e) {
-            return new ResponseEntity<>(e.getMessage(), HttpStatus.BAD_REQUEST);
+    @DeleteMapping("/name/{name}")
+    public ResponseEntity<String> deleteSectionByName(@PathVariable String name) {
+        boolean isDeleted = service.deleteSectionByName(name);
+        if (isDeleted) {
+            return new ResponseEntity<>("Section deleted successfully", HttpStatus.OK);
+        } else {
+            throw new NoSuchElementException("Section with name '" + name + "' does not exist");
         }
     }
 }
